--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 	<properties>
 		<java.version>1.6</java.version>
 		<spring.version>5.1.3.RELEASE</spring.version>
-		
+		<hibernate.version>4.3.6.Final</hibernate.version>
+		<joda-time.version>2.3</joda-time.version>
 	</properties>
 
 	<dependencies>
@@ -44,6 +45,40 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+       
+		
+		 <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        
+         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.1.3.Final</version>
+        </dependency>
+        
+         <!-- Joda-Time -->       
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
+        </dependency>
+         
+          
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>3.0.0.CR1</version>
+        </dependency>
 
 		
 		<!-- Servlet Spec -->
@@ -97,7 +132,23 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.4.14.v20181114</version>
+                 <configuration>
+    			<scanIntervalSeconds>10</scanIntervalSeconds>
+			    <webApp>
+			      <contextPath>/todo</contextPath>
+			    </webApp>
+  </configuration>		
             </plugin>
+            <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <warSourceDirectory>src/main/webapp</warSourceDirectory>
+                        <warName>todo</warName>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
+                </plugin>
 		</plugins>
 	</build>
 </project>
