--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<java.version>1.6</java.version>
+		<java.version>1.8</java.version>
 		<spring.version>5.1.3.RELEASE</spring.version>
 		<hibernate.version>4.3.6.Final</hibernate.version>
 		<joda-time.version>2.3</joda-time.version>
@@ -69,19 +69,33 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.3</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-joda</artifactId>
+		    <version>2.13.3</version>
+		</dependency>
+
 
 		<!-- Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate.version}</version>
+			<version>5.3.5.Final</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>5.1.3.Final</version>
+			<version>5.4.1.Final</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		    <version>2.1.214</version>
+		</dependency>
+
 
 		<!-- Joda-Time -->       
 		<dependency>
@@ -94,7 +108,7 @@
 		<dependency>
 			<groupId>org.jadira.usertype</groupId>
 			<artifactId>usertype.core</artifactId>
-			<version>3.0.0.CR1</version>
+			<version>7.0.0.CR1</version>
 		</dependency>
 
 		<!-- Servlet Spec -->
